# mixvllm

./: .dockerignore  .gitignore  Dockerfile  README.md  chat  chat.backup  create_project.sh  debug_mcp.py  install.sh  installation_guide.md  launch  mixvllm-chat  mixvllm-serve  pyproject-chat.toml  pyproject-terminal.toml  pyproject.toml  serve  serve_model.py  test_mcp.py
.claude/experiments/: test_gpu.py  test_vllm.py
.github/workflows/: docker-build.yml
configs/: example_model.yaml  gpt-oss-20b.yaml  llama-70b-tp2.yaml  llama-7b.yaml  mcp_servers.yaml  phi3-mini-with-terminal.yaml
docker/: Dockerfile.terminal  README.md  docker-compose.yml  entrypoint.sh  launch_model.sh  model_registry.yml
docker/config/: launch.py  model_registry.yml
docker/head/: .env.example  README.md  docker-compose.yml
docker/stand_alone/: docker-compose.yml
docker/worker/: .env.exmple  README.md  docker-compose.yml
mixvllm/: __init__.py
mixvllm-chat/: .dockerignore  Dockerfile.terminal  README.md  chat  pyproject.toml
mixvllm-chat/app/: chat_client.py
mixvllm-chat/app/client/: __init__.py  cli.py  response_handler.py  test_client.py  tool_manager.py  ui_manager.py
mixvllm-chat/app/client/utils/: mcp_client.py  mcp_tools.py
mixvllm-chat/app/config/: mcp_servers.yaml
mixvllm-chat/app/utils/: mcp_client.py  mcp_tools.py
mixvllm-chat/terminal/: terminal_server_standalone.py
mixvllm/cli/: README.md  serve_model.py  terminal_server.py
mixvllm/client/: README.md  __main__.py  chat_client.py  chat_engine.py  cli.py  config.py  connection_manager.py  history_manager.py  response_handler.py  test_client.py  ui_manager.py
mixvllm/inference/: README.md  config.py  server.py  terminal_config.py  terminal_server.py  utils.py
mixvllm/inference/static/: terminal.html
mixvllm/utils/: chat_client.py  chat_client_enhanced.py  mcp_client.py  mcp_tools.py
mixvllm_server/: README.md  pyproject.toml
mixvllm_server/src/: launch
mixvllm_server/src/cli/: serve_model.py
mixvllm_server/src/config/: phi3-mini.yaml
mixvllm_server/src/inference/: config.py  server.py
mixvllm_server/src/mixvllm_server/cli/: __init__.py
mixvllm_server/src/mixvllm_server/inference/: README.md  utils.py
multi_node_gpu_cluster_with_rdma/: setup.md
src/inference/: config.py  server.py
src/utils/: chat_client_enhanced.py  mcp_client.py  mcp_tools.py
standalone/chat/: __init__.py  chat_client_standalone.py  chat_client_standalone_backup.py
standalone/chat/client/: README.md  chat_client.py  chat_engine.py  connection_manager.py  response_handler.py  tool_manager.py  ui_manager.py
standalone/chat/client/utils/: __init__.py
standalone/chat/utils/: mcp_tools.py
standalone/terminal/: terminal_server_standalone.py
tests/: tensor_parallel.py  test_mcp.py
