[project]
name = "vllm-dev"
version = "0.1.0"
description = "vLLM development environment with dual-GPU tensor parallelism"
requires-python = ">=3.10"
dependencies = [
    "vllm>=0.6.0",
    "ray>=2.9.0",
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "requests>=2.25.0",
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
    "langchain-ollama>=0.1.0",
    "langchain-core>=0.2.0",
    "langgraph>=0.1.0",
    "openai>=2.2.0",
    "pylatexenc>=2.10",
    "terminado>=0.18.0",
    "tornado>=6.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
    "ipython>=8.12.0",
]

[project.scripts]
mixvllm-serve = "mixvllm.cli.serve_model:main"
mixvllm-chat = "chat_client_standalone:main"
mixvllm-terminal-server = "terminal_server_standalone:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mixvllm"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "huggingface-hub[cli]>=0.35.3",
]
