[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mixvllm_server"
version = "0.1.0"
description = "MixVLLM Server Package"
requires-python = ">=3.10"
dependencies = [
    "vllm>=0.6.0",
    "ray>=2.9.0",
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
    "ipython>=8.12.0",
]


[project.scripts]
mixvllm-serve = "mixvllm_server.cli.serve_model:main"


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "huggingface-hub[cli]>=0.35.3",
    "pytest-cov>=7.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mixvllm_server"]